applications/client/cyberchef/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cyberchef
spec:
  parentRefs:
    - group: gateway.networking.k8s.io	
      kind: ListenerSet
      name: cyberchef
  hostnames:
  - cyberchef.jynolen.fr
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: cyberchef
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
